k3s/paperless/db-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-db
  namespace: paperless
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: paperless-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app: paperless
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: garage
            app: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    - toEntities:
        - kube-apiserver
