k3s/paperless/tika-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tika
  namespace: paperless
spec:
  endpointSelector:
    matchLabels:
      app: tika
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app: paperless
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
